Fixed skip content link contrast mentioned in issue #31

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -100,7 +100,7 @@ nav {
 #logo h1 {
     color: #fff;
 } 
-#logo h2 {
+#logo h2, #skip-content {
     color: #1C0800;
 }
 
